# desktop-cmd-exec

./: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  compile  config.guess  config.sub  configure  configure.ac  depcomp  desktop-cmd-exec.0.601.c  desktop-cmd-exec.c  desktop-cmd-exec.desktop  desktop-cmd-exec.h  install-sh  ltmain.sh  missing  mkinstalldirs  nobraco.sh  rmnobraco.sh
debian/: changelog  control  copyright  rules
