AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(desktop-cmd-exec, 0.1)

AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

PKG_CHECK_MODULES(DESKTOP, libhildondesktop-1)
AC_SUBST(DESKTOP_LIBS)
AC_SUBST(DESKTOP_CFLAGS)

PKG_CHECK_MODULES(CONIC, conic)
AC_SUBST(CONIC_LIBS)
AC_SUBST(CONIC_CFLAGS)

AC_OUTPUT([ Makefile])
