AC_INIT([desktop-cmd-exec], [1.20])
AM_INIT_AUTOMAKE([foreign])

LT_INIT([shared disable-static])

AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIRS([m4])

PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

PKG_CHECK_MODULES(DESKTOP, libhildondesktop-1)
AC_SUBST(DESKTOP_LIBS)
AC_SUBST(DESKTOP_CFLAGS)

PKG_CHECK_MODULES(CONIC, conic)
AC_SUBST(CONIC_LIBS)
AC_SUBST(CONIC_CFLAGS)

AC_OUTPUT([ Makefile])
